# yarr

./: .gitignore  CMakeLists.txt  resources.qrc  rules.txt  yarr.qrc
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  board.cpp  board.h  boardmodel.cpp  boardmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkabstract.cpp  networkabstract.h  networkclient.cpp  networkclient.h  networkplayerlocal.cpp  networkplayerlocal.h  networkplayerremote.cpp  networkplayerremote.h  networkserver.cpp  networkserver.h  painter.cpp  painter.h  player.cpp  player.h  reversiplayer.cpp  reversiplayer.h  settings.cpp  settings.h  settings.ui  solver.cpp  solver.h  tests.cpp  tests.h
